@@ -804,7 +804,7 @@ public:
 	int32 GetAugmentIDAt(int16 slot_id, uint8 augslot);
 	bool PutItemInInventory(int16 slot_id, const ItemInst& inst, bool client_update = false);
 	bool PushItemOnCursor(const ItemInst& inst, bool client_update = false);
-	void SummonCursorBuffer();
+	void SendCursorBuffer();
 	void DeleteItemInInventory(int16 slot_id, int8 quantity = 0, bool client_update = false, bool update_db = true);
 	bool SwapItem(MoveItem_Struct* move_in);
 	void SwapItemResync(MoveItem_Struct* move_slots);
